Fixed contact me form on IE 11

--- a/less/app.less
+++ b/less/app.less
@@ -473,6 +473,10 @@ legend{
   width: 60%;
 }
 
+legend.center{
+  margin-bottom: 20px;
+}
+
 .form-control{
   height: 45px;
   font-size: 18px;
